[cf] Перевести работу ConfigRestServiceImpl с jpa c queryDsl на спецификации - правки сортировки (CONFIG-39)